--- a/changelog
+++ b/changelog
@@ -568,4 +568,18 @@ localStorage.setItem('deadPoolRevives', deadPoolRevives);
 deadPoolRevives = parseFloat(localStorage.getItem('deadPoolRevives')) || 0;
 
 
-deadPoolRevives = 0;   ///// in bigCrunch()
+///// in bigCrunch()
+let deadpoolHint = '';
+
+if (deadpoolRevives > 0 && !purchasedUpgrades.some(up => up.name === 'Deadpool')) {
+    deadpoolHint = `<br><br><span style="color: #FFD700;">Your instincts hint that Big Crunch might also reset all of Deadpool's deaths...</span>`;
+}
+
+const confirmed = await showMessageModal(
+    'Big Crunch Confirmation',
+    `Are you sure you want to prestige? You will reset all resources, prestiges, and god-mode levels, but your Big Crunch Multiplier will increase <strong>from ${formatNumber(bigCrunchMultiplier)} to ${formatNumber(calculateBigCrunchMultiplier(power))}</strong>.<br> Big crunch multiplier stacks with all your other multipliers, plus additionally affects your Knowledge generation! (Your Big Crunch Power will lock in at the current Power level)` + deadpoolHint,
+    true
+);
+
+//if confirmed
+deadPoolRevives = 0;   
